--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)https://yayady1999.github.io/portfolio.in/ -->
 <html lang="en" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="keywords" content="Vaše, Vašek Zahrádka, CV, životopis, portfolio, cybersecurity, cyber security, IT, ICT, Vašek github, Vašek 1974">
@@ -22,7 +21,7 @@
     </div>
 
     <header>
-      <a href="https://yayady1999.github.io/portfolio.in/#" class="brand">Vašek Zahrádka</a>
+      <a href="https://zahradkaknihovna.github.io/vasec/index.html#skills" class="brand">Vašek Zahrádka</a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="https://zahradkaknihovna.github.io/vasec/index.html#main">Domů</a>
