--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="keywords" content="Vaše, Vašek Zahrádka, CV, životopis, portfolio, cybersecurity, cyber security, IT, ICT, Vašek github, Vašek 1974">
-<meta name="google-site-verification" content="bgfSSGu8siCorVEachhOBHT4qElXxLweysXwa5F8D34">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Responsive Personal Portfolio Website </title>
     <link rel="stylesheet" href="./vasec_files/style.css">
@@ -12,7 +11,7 @@
 																	   </style>
     <script src="./vasec_files/typed.min.js.stahování"></script>
     <script src="./vasec_files/jquery.waypoints.min.js.stahování"></script>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">    
   </head>
   <body>
 
