--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <meta name="keywords" content="Vaše, Vašek Zahrádka, CV, životopis, portfolio, cybersecurity, cyber security, IT, ICT, Vašek github, Vašek 1974">
+    <meta name="keywords" content="Vašek, Vašek Zahrádka, CV, životopis, portfolio, cybersecurity, cyber security, IT, ICT, Vašek github, Vašek 1974">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Responsive Personal Portfolio Website </title>
     <link rel="stylesheet" href="./vasec_files/style.css">
@@ -10,7 +10,7 @@
     <script src="./vasec_files/typed.min.js.stahování"></script>
     <script src="./vasec_files/jquery.waypoints.min.js.stahování"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">   
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
 
   </head>
   <body>
