--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@
               <i class="fab fa-linkedin-in"></i>
             </div>
             <div class="info">
-              <h3>LinkedIn</h3>
-              <span>linkedin.com/in/václav-zahrádka-9169481b</span>
+		<a href="https://linkedin.com/in/václav-zahrádka-9169481b" target="_blank" rel="noopener noreferrer">
+     		<h3>LinkedIn</h3>
+    		</a>
             </div>
           </div>
         </div>
