--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <meta name="keywords" content="Vašek, Vašek Zahrádka, CV, životopis, portfolio, cybersecurity, cyber security, IT, ICT, Vašek github, Vašek 1974">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Responsive Personal Portfolio Website </title>
+    <title>Vašek Zahrádka - portfolio web</title>
     <link rel="stylesheet" href="./vasec_files/style.css">
     <link rel="stylesheet" href="./vasec_files/all.min.css">
 	
