--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           </div>
         </div>
         <div class="column col-right reveal">
-          <h2 class="content-title">Ahoj, jsem Vašek Z.</h2>
+          <h2 class="content-title">Ahoj, jsem Vašek Zahrádka</h2>
           <p class="paragraph-text">Jsem absolventem oboru aplikovaná informatika na Univerzitě Hradec Králové. Specializuji se na digitální forenziku a kybernetickou bezpečnost. Narodil jsem se na Šumavě, žil jsem v Praze, abych se nakonec odstěhoval do Zlína. Jako člověk, který měl možnost poznat různé kultury a lidi, mám rád kolektiv a ten má snad i rád mě. Jsem nadšený webový vývojář, vášnivý analytik kybernetické bezpečnosti, vášnivý cestovatel, amatérsky hraju na kytaru a občas si střihnu nějakou běžeckou výzvu jako je pražský půlmaraton či Morava run </p>
-          <a href="https://zahradkaknihovna.github.io/vasec/index.html#projects" class="btn">Více info</a>
+          <a href="https://zahradkaknihovna.github.io/vasec/CV_Zahradka.pdf" class="btn">Moje CV</a>
         </div>
       </div>
     </section>
